fix corner tag overflow hidden

--- a/packages/ag-grid-theme/css/_salt-ag-theme-mixin.scss
+++ b/packages/ag-grid-theme/css/_salt-ag-theme-mixin.scss
@@ -203,11 +203,16 @@
     border: solid 1px var(--agGrid-cell-borderColor-editable);
   }
 
+  .ag-cell.editable-cell.ag-cell-focus:focus {
+    overflow: visible;
+    clip-path: inset(0, 0);
+  }
+
   .ag-cell.editable-cell.ag-cell-focus:focus:before {
     content: "";
     position: absolute;
-    top: 0;
-    left: 0;
+    top: -2px;
+    left: -2px;
     border-top: 0 solid transparent;
     border-left: var(--agGrid-editableCell-cornerTag-size) solid
       var(--agGrid-cursor-borderColor);
